crates/ruff_linter/src/rules/darglint/snapshots/ruff_linter__rules__darglint__tests__docstring-missing-exception_DAR401_google.py.snap
---
source: crates/ruff_linter/src/rules/darglint/mod.rs
---
DAR401_google.py:33:15: DAR401 Raised exception `FasterThanLightError` missing from docstring
   |
31 |         return distance / time
32 |     except ZeroDivisionError as exc:
33 |         raise FasterThanLightError from exc
   |               ^^^^^^^^^^^^^^^^^^^^ DAR401
   |

DAR401_google.py:49:15: DAR401 Raised exception `FasterThanLightError` missing from docstring
   |
47 |         return distance / time
48 |     except ZeroDivisionError as exc:
49 |         raise FasterThanLightError from exc
   |               ^^^^^^^^^^^^^^^^^^^^ DAR401
50 |     except:
51 |         raise ValueError
   |

DAR401_google.py:51:15: DAR401 Raised exception `ValueError` missing from docstring
   |
49 |         raise FasterThanLightError from exc
50 |     except:
51 |         raise ValueError
   |               ^^^^^^^^^^ DAR401
   |
